k8s相关组件/winweb/win-webserver-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: win-webserver-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: win-webserver
          servicePort: 80
